translation-tool/inputs/source_meta/objects/Plan__c.object
<CustomObject>
    <description>Will store base and option plans</description>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is this plan active or inactive?</description>
        <inlineHelpText>Is this plan active or inactive?</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Path_ID__c</fullName>
        <externalId>true</externalId>
        <label>Path ID</label>
        <length>254</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <description>Product catalog path to this plan.</description>
        <inlineHelpText>Product catalog path to this plan.</inlineHelpText>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_ID__c</fullName>
        <description>Salesforce Plan ID (For Internal Use Only).</description>
        <formula>Id</formula>
        <inlineHelpText>Salesforce Plan ID (For Internal Use Only).</inlineHelpText>
        <label>Plan ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Base</fullName>
                </value>
                <value>
                    <fullName>Option</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan</label>
    <nameField>
        <label>Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plans</pluralLabel>
    <recordTypes>
        <fullName>FOSS</fullName>
        <active>true</active>
        <description>Controls picklist values, page layouts, and determines which User Profiles can view this category of records.</description>
        <label>FOSS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>